--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-flatpickr": "^3.10.13",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.10.1",
     "react-quill": "^2.0.0",
@@ -74,12 +75,12 @@
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "@vitejs/plugin-react": "^4.0.0",
-    "prettier": "^3.0.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.42.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "postcss": "^8.4.24",
+    "prettier": "^3.0.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3",
     "vite": "^4.3.9"
