--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "attex-tailwind-react",
+  "name": "portal-tailwind-react",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -79,10 +79,10 @@
     "eslint": "^8.42.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3",
-    "vite": "^4.3.9"
+    "vite": "^5.3.5"
   }
 }
